--- a/environment.yaml
+++ b/environment.yaml
@@ -12,5 +12,9 @@ dependencies:
   - spades=3.15.3
   - clustalw=2.1
   - freebayes=1.3.6
+  - python=3
+  - pip
   - pandas=2.0.3
   - seaborn=0.12.2
+  - pip:
+    - git+https://github.com/BCCDC-PHL/FluViewer.git@v0.1.11-3
